--- a/style.css
+++ b/style.css
@@ -4,9 +4,6 @@ body{
 h1{
     font-size: 50px;
 }
-.another-color{
-    color: darkorange;
-}
 .flex-container{
     display: flex;
     margin-left: 40px;
@@ -102,3 +99,10 @@ h2{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+footer{
+    background-color: black;
+    height: 100px;
+    padding-top: 40px;
+    color: white;
+    text-align: center;
+}
