--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1{
 .flex-container{
     display: flex;
     margin-left: 40px;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -102,7 +103,7 @@ h2{
 footer{
     background-color: black;
     height: 100px;
-    padding-top: 40px;
+    padding-top: 20px;
     color: white;
     text-align: center;
 }
